Fix compatibility with Java 11