@@ -1,15 +1,13 @@
 <!--
-
-    The Alluxio Open Foundation licenses this work under the Apache License, version 2.0
-    (the "License"). You may not use this work except in compliance with the License, which is
-    available at www.apache.org/licenses/LICENSE-2.0
-
-    This software is distributed on an "AS IS" basis, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
-    either express or implied, as more fully set forth in the License.
-
-    See the NOTICE file distributed with this work for information regarding copyright ownership.
-
--->
+  ~ The Alluxio Open Foundation licenses this work under the Apache License, version 2.0
+  ~ (the "License"). You may not use this work except in compliance with the License, which is
+  ~ available at www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ This software is distributed on an "AS IS" basis, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
+  ~ either express or implied, as more fully set forth in the License.
+  ~
+  ~ See the NOTICE file distributed with this work for information regarding copyright ownership.
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.alluxio</groupId>
@@ -134,7 +132,7 @@
     <rocksdb.version>7.0.3</rocksdb.version>
     <hadoop.version>3.3.1</hadoop.version>
     <jacoco.version>0.8.5</jacoco.version>
-    <java.version>1.11</java.version>
+    <java.version>11</java.version>
     <jaxb.version>2.3.3</jaxb.version>
     <jersey.version>2.34</jersey.version>
     <jetty.version>9.4.46.v20220331</jetty.version>
@@ -416,6 +414,11 @@
         <groupId>jakarta.ws.rs</groupId>
         <artifactId>jakarta.ws.rs-api</artifactId>
         <version>2.1.6</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
@@ -922,6 +925,10 @@
             <maxmem>1024m</maxmem>
             <compilerArgs>
               <arg>-Xlint:none</arg>
+              <arg>--add-exports=java.base/jdk.internal.access=ALL-UNNAMED</arg>
+              <arg>--add-exports=java.base/jdk.internal=ALL-UNNAMED</arg>
+              <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+              <arg>--add-exports=java.management/sun.management=ALL-UNNAMED</arg>
             </compilerArgs>
           </configuration>
         </plugin>
@@ -981,7 +988,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
           <configuration>
-            <argLine>@{argLine} -Djava.net.preferIPv4Stack=true</argLine>
+            <argLine>@{argLine} -Djava.net.preferIPv4Stack=true --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
             <excludesFile>${build.path}/surefire/${surefire.excludesFile}</excludesFile>
             <forkCount>${surefire.forkCount}</forkCount>
             <rerunFailingTestsCount>${surefire.rerunFailingTestsCount}</rerunFailingTestsCount>
@@ -1348,44 +1355,6 @@
       <properties>
         <hadoop.version>3.3.1</hadoop.version>
       </properties>
-    </profile>
-
-    <!-- Requires hadoop.version to be 2.4.0 or later -->
-    <profile>
-      <id>java11</id>
-      <activation>
-        <jdk>11</jdk>
-      </activation>
-      <properties>
-        <java.version>1.8</java.version>
-      </properties>
-      <dependencyManagement>
-        <dependencies>
-          <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
-          </dependency>
-        </dependencies>
-      </dependencyManagement>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <configuration>
-              <source>11</source>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
 
     <!-- profile that Alluxio developers should use -->
